// RachaScore — schema (dbdiagram.io)
// profiles.id referencia auth.users(id), gerenciado pelo Supabase Auth (não modelado aqui)

Table profiles {
  id uuid [pk]
  nome text [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table grupos {
  id uuid [pk, default: `gen_random_uuid()`]
  nome text [not null]
  dono_id uuid [not null]
  convite_token uuid [not null, unique, default: `gen_random_uuid()`, note: 'link de convite; regenerar invalida o antigo']
  created_at timestamptz [not null, default: `now()`]
}

Table jogadores {
  id uuid [pk, default: `gen_random_uuid()`]
  nome text [not null]
  user_id uuid [note: 'opcional - jogador pode não ter conta']
  email text [note: 'convite pendente; linkado ao user_id automaticamente no signup']
  convite_token uuid [unique, note: 'convite pessoal p/ assumir jogador avulso; null = sem convite pendente']
  created_at timestamptz [not null, default: `now()`]
}

Table membros_grupo {
  grupo_id uuid [not null]
  jogador_id uuid [not null]
  is_admin boolean [not null, default: false, note: 'mesmos poderes do dono, exceto apagar o grupo']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (grupo_id, jogador_id) [pk]
  }
}

Table rachas {
  id uuid [pk, default: `gen_random_uuid()`]
  grupo_id uuid [not null]
  modalidade modalidade_enum [not null]
  modo modo_enum [not null]
  tamanho_equipe int [not null]
  config jsonb [not null, default: `'{}'`, note: 'regras de fim de partida, específicas por modalidade']
  data_hora timestamptz [not null]
  local text
  limite_jogadores int [note: 'null = sem limite; acima disso, presença entra em lista de espera']
  finalizado boolean [not null, default: false, note: 'manual; data_hora passada tambem conta como finalizado, ver lib/racha.ts']
  created_at timestamptz [not null, default: `now()`]
}

Table times {
  id uuid [pk, default: `gen_random_uuid()`]
  racha_id uuid [not null]
  nome text [not null]
  sorteio boolean [not null, default: false, note: 'gerado pelo "Sortear" — não pode ser apagado na tela Times']
  created_at timestamptz [not null, default: `now()`]
}

Table presencas_racha {
  racha_id uuid [not null]
  jogador_id uuid [not null]
  status presenca_status_enum [not null, default: 'confirmado']
  time_id uuid [note: 'time atual do jogador naquele racha (torneio: fixo; rápido: do último sorteio/partida)']
  created_at timestamptz [not null, default: `now()`]
  pediu_vaga_em timestamptz [not null, default: `now()`, note: 'atualizado a cada pedido de presença; ordena a fila de espera']

  indexes {
    (racha_id, jogador_id) [pk]
  }
}

Table partidas {
  id uuid [pk, default: `gen_random_uuid()`]
  racha_id uuid [not null]
  time_a_id uuid [not null]
  time_b_id uuid [not null]
  status status_enum [not null, default: 'agendada']
  placar_a int [not null, default: 0]
  placar_b int [not null, default: 0]
  vencedor_id uuid [note: 'null = empate (só futebol)']
  cronometro_segundos int [not null, default: 0, note: 'segundos acumulados até cronometro_atualizado_em']
  cronometro_rodando boolean [not null, default: false]
  cronometro_atualizado_em timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table sets {
  id uuid [pk, default: `gen_random_uuid()`]
  partida_id uuid [not null]
  numero int [not null]
  placar_a int [not null, default: 0]
  placar_b int [not null, default: 0]
  vencedor_id uuid
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (partida_id, numero) [unique]
  }
}

Table eventos_ponto {
  id uuid [pk, default: `gen_random_uuid()`]
  partida_id uuid [not null]
  set_id uuid [note: 'só vôlei']
  time_id uuid [not null, note: 'time que ganhou o ponto']
  jogador_id uuid [note: 'opcional - nem todo ponto tem autor. Em erro_adversario, é quem ERROU (time_id continua sendo de quem ganhou o ponto)']
  assistencia_jogador_id uuid [note: 'opcional, só futebol']
  motivo motivo_enum
  created_at timestamptz [not null, default: `now()`]
}

Table cartoes {
  id uuid [pk, default: `gen_random_uuid()`]
  partida_id uuid [not null]
  jogador_id uuid [not null]
  tipo cartao_enum [not null]
  created_at timestamptz [not null, default: `now()`]

  note: 'só futebol — registro avulso, não afeta placar nem escalação'
}

Table escalacoes_partida {
  partida_id uuid [not null]
  jogador_id uuid [not null]
  time_id uuid [not null]

  indexes {
    (partida_id, jogador_id) [pk]
  }

  note: '''
    Escalação por partida (modo rápido): quem joga em qual time NAQUELA partida
    específica, sem prender o jogador ao time do racha inteiro. Torneio continua
    usando presencas_racha.time_id, fixo pro racha, pra classificação fazer sentido.
  '''
}

Table avaliacoes {
  racha_id uuid [not null]
  avaliador_jogador_id uuid [not null]
  avaliado_jogador_id uuid [not null]
  nota int [not null, note: 'entre 1 e 5']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (racha_id, avaliador_jogador_id, avaliado_jogador_id) [pk]
  }

  note: '''
    Avaliação de jogador por jogador, por racha. Só quem confirmou presença
    avalia, só quem também confirmou é avaliado, nunca a si mesmo — tudo
    validado na RPC avaliar_jogadores, não em policy direta na tabela.
    Média por jogador/modalidade é agregada via RPC medias_avaliacao_grupo.
  '''
}

enum modalidade_enum {
  futebol
  volei
}

enum modo_enum {
  torneio
  rapido
}

enum presenca_status_enum {
  confirmado
  espera
  ausente
}

enum status_enum {
  agendada
  em_andamento
  finalizada
}

enum motivo_enum {
  pinga
  lob
  corte
  bloqueio
  saque
  erro_adversario
  outro
}

enum cartao_enum {
  amarelo
  vermelho
}

Ref: grupos.dono_id > profiles.id
Ref: jogadores.user_id > profiles.id
Ref: membros_grupo.grupo_id > grupos.id
Ref: membros_grupo.jogador_id > jogadores.id
Ref: rachas.grupo_id > grupos.id
Ref: times.racha_id > rachas.id
Ref: presencas_racha.racha_id > rachas.id
Ref: presencas_racha.jogador_id > jogadores.id
Ref: presencas_racha.time_id > times.id
Ref: partidas.racha_id > rachas.id
Ref: partidas.time_a_id > times.id
Ref: partidas.time_b_id > times.id
Ref: partidas.vencedor_id > times.id
Ref: sets.partida_id > partidas.id
Ref: sets.vencedor_id > times.id
Ref: eventos_ponto.partida_id > partidas.id
Ref: eventos_ponto.set_id > sets.id
Ref: eventos_ponto.time_id > times.id
Ref: eventos_ponto.jogador_id > jogadores.id
Ref: eventos_ponto.assistencia_jogador_id > jogadores.id
Ref: cartoes.partida_id > partidas.id
Ref: cartoes.jogador_id > jogadores.id
Ref: escalacoes_partida.partida_id > partidas.id
Ref: escalacoes_partida.jogador_id > jogadores.id
Ref: escalacoes_partida.time_id > times.id
Ref: avaliacoes.racha_id > rachas.id
Ref: avaliacoes.avaliador_jogador_id > jogadores.id
Ref: avaliacoes.avaliado_jogador_id > jogadores.id

// classificacao_racha: view calculada (não modelada) — agrega partidas
// finalizadas por time_id dentro de um racha em modo torneio.
